# rispy

./: .gitignore  Cargo.toml  README.md  ex.lisp  test.sh
.github/workflows/: release.yml
src/: main.rs
